			SWI-Prolog ChangeLog
			====================

  * INTERNAL: recorded database to to avoid unaligned retrieval using
    memcpy().  Provides a little extra speed notably in findall, setof
    and friends, at the cost of some memory.

  * FIXED: scan_options() for machines where sizeof(int) != sizeof(long).
    With help from Bob Moniot.

  * FIXED: configure work-around for shells providing $PWD, but with the
    wrong value ...

  * FIXED: time_t problem in convert_time/2.  Added exception to instantiation
    errors of convert_time/[2,8].

  * FIXED: Portability problem for PPC chip (and possibly others) in
    PL_unify_term(), causing crashes at various places on affected
    processors.  The new implementation is propably a litle faster too.
    With help of Paulo Moura.

  * FIXED: a few type conversions for the 64-bit versions. Just making
    the compiler silent.

  * FIXED: Changed singleton error to singleton warning using a direct
    call to printMessage() rather then the out-of-date warning().  Reported
    by Pierre Nugues.

VERSION 3.3.0 (final)
=====================

  * FIXED: Undesired interaction between abort and exceptions.

  * MODIFIED: Simplified the interface around the undocumented PL_dispatch()
    call to improve interactive response on exceptions, etc.

  * ADDED: PL_is_initialised() to test whether Prolog is initialised.  Also,
    when calling PL_initialise() twice the second call is a no-op.  Made
    PL_initialise() thread-safe, so concurent threads can call it.

  * MODIFIED: Unix version no longer installs Windows specific library
    files (dde.pl, registry.pl, progman.pl).

  * DELETED: libraries toolkit.pl, gensym.pl, qlfutil.pl.  Obscure and
    out of date functionality.

  * ADDED: library url.pl: parsing URL's

VERSION 3.3.0 (release-14)
==========================

  * FIXED: apply/2. Lourens again!
	
VERSION 3.3.0 (release-13)
==========================
